--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -338,3 +338,12 @@ heimdall.msg.on-payload-unit-1=Too high
 heimdall.msg.on-payload-unit-2=I'm falling!
 heimdall.msg.on-payload-unit-3=Help me!
 heimdall.msg.on-payload-unit-4=I'm flying
+# Heimdall Project
+heimdall.title=Heimdall Project
+heimdall.button-tip=Develop the Heimdall Project
+heimdall.mining.category.Mineral=Mineral
+heimdall.mining.category.Liquid=Liquid
+heimdall.mining.reserve.Poor=Poor
+heimdall.mining.reserve.Low=Low
+heimdall.mining.reserve.Normal=Normal
+heimdall.mining.reserve.High=High
