Updated to the latest game and arc.

--- a/.github/workflows/TestWhenPush.yml
+++ b/.github/workflows/TestWhenPush.yml
@@ -20,4 +20,4 @@ jobs:
       - name: Test CyberIO
         run: |
           chmod +x gradlew
-          ./gradlew :main:test
+          ./gradlew :test
