--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,10 @@
 # suppress inspection "SpellCheckingInspection" for whole file
 KotlinVersion=1.6.21
-MindustryVersion=v136
-OpenGalPlumy=v0.1.4
+GameLaunchVersion=v136
+OpenGalPlumyVersion=v0.1.4
 OutputJarName=CyberIO
-MdtHash=b7559f2bd4
-PlumyHash=7597fd8bb8
+# Use anuke's mirror for now on https://github.com/Anuken/MindustryJitpack
+MindustryVersion=b7559f2bd4
+ArcVersion=89f5cbe7ab
+PlumyVersion=7597fd8bb8
+OpenGalVersion=v0.4.3
