Fixed gradle build scripts downloading wrong Mindustry files.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 # suppress inspection "SpellCheckingInspection" for whole file
+kotlin.code.style=official
 KotlinVersion=1.6.21
-GameLaunchVersion=v136
+GameLaunchVersion=136
 OpenGalPlumyVersion=v0.1.4
 OutputJarName=CyberIO
 # Use anuke's mirror for now on https://github.com/Anuken/MindustryJitpack
