--- a/.github/workflows/TestBuildWhenPullRequest.yml
+++ b/.github/workflows/TestBuildWhenPullRequest.yml
@@ -23,4 +23,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: ${{ github.event.repository.name }} Pull Request
-          path: build/libs/${{ github.event.repository.name }}.jar
+          path: main/build/tmp/deploy/*.jar t
