--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,9 @@
 # suppress inspection "SpellCheckingInspection" for whole file
 kotlin.code.style=official
 KotlinVersion=1.6.21
-GameLaunchVersion=136
 OpenGalPlumyVersion=v0.1.4
 OutputJarName=CyberIO
 # Use anuke's mirror for now on https://github.com/Anuken/MindustryJitpack
-MindustryVersion=c7d556ad1c
-ArcVersion=89f5cbe7ab
 PlumyVersion=7597fd8bb8
 OpenGalVersion=v0.4.3
+mgpp.deploy.enableFatJar=false
