Upgraded mgpp to v1.1.4. More!

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -189,6 +189,8 @@ setting.cyber-io-show-link-circle.name=Show Connection Circle
 setting.cyber-io-show-link-circle.description=Whether show a circle surrounding sender and receiver.
 setting.cyber-io-always-show-link.name=Always Show Connection
 setting.cyber-io-always-show-link.description=Whether the arrow always shows up when they're connected.
+setting.cyber-io-show-wireless-tower-circle.name=Show Wireless Tower Circle
+setting.cyber-io-show-wireless-tower-circle.description=Whether the infinite pinging circle will show up
 setting.cyber-io-show-welcome.name=Receive Message from Plum Star Inc.
 setting.cyber-io-show-welcome.description=Whether flavor text shows up when game starts up.
 setting.cyber-io-show-update.name=Show CyberIO Update Notification
