Better heimdall stat

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -148,11 +148,7 @@ stat.power-cyber-io-transfer-speed=Transfer Speed
 # Bundles
 cyber-io.cost.second=sec
 cyber-io.cost.minute=min
-cyber-io.percent.plus=+{0}%
-cyber-io.percent.minus=-{0}%
-cyber-io.value.plus=+{0}
-cyber-io.value.minus=-{0}
-cyber-io.speed-increase.range={0}% to {1}%
+cyber-io.speed-increase.range=from {0}% to {1}%
 cyber-io.full-sender=Reach Maximum Senders
 cyber-io.full-receiver=Reach Maximum Receivers
 cyber-io.full-host=Reach Maximum Hosts
@@ -239,17 +235,17 @@ heimdall.reload-time.description=How long between two waves
 heimdall.max-brain-wave-num.name=Wave Number
 heimdall.max-brain-wave-num.description=How many waves can exist at the same time
 heimdall.control-line.name=Control
-heimdall.control-line.description=What percentage of HP brain wave can control the target
+heimdall.control-line.description=Enemy can be controlled when its HP lower than
 heimdall.force-field-max.name=Shield
-heimdall.force-field-max.description=The maximum of shield capacity if it exists
+heimdall.force-field-max.description=The maximum of shield capacity if existed
 heimdall.force-field-regen.name=Shield Regeneration
-heimdall.force-field-regen.description=The regeneration speed of shield
+heimdall.force-field-regen.description=The regeneration efficiency of shield
 heimdall.force-field-radius.name=Shield Range
-heimdall.force-field-radius.description=The max range shield can protect
+heimdall.force-field-radius.description=The max range that shield can protect
 heimdall.force-field-restore-time.name=Shield Reload
-heimdall.force-field-restore-time.description=How long shield need to prepare.
+heimdall.force-field-restore-time.description=How long shield prepares after broken
 heimdall.power-use.name=Power Use
-heimdall.power-use.description=The use of power every second.
+heimdall.power-use.description=The use of power per second.
 # Heimdall Killing
 heimdall.msg.killing-0=Salvation
 heimdall.msg.killing-1=Well done
