--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -20,6 +20,11 @@ jobs:
       - name: Get short commit hash
         run: echo "SHORT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
+      - name: Test CyberIO
+        run: |
+          chmod +x gradlew
+          ./gradlew :main:test
+
       - name: Build Cyber-IO
         run: |
           chmod +x gradlew
