--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -32,7 +32,7 @@ jobs:
 
       - uses: actions/upload-artifact@v2
         with:
-          name: CyberIO-Jar
+          name: CyberIO-Unzip-This
           path: main/build/tmp/deploy/*.jar
 
   upload:
