--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -178,6 +178,8 @@ setting.cyber-io-connection-density.name=Connection Density
 setting.cyber-io-connection-density.description=The density of arrow between sender and receiver.
 setting.cyber-io-connection-size.name=Connection Arrow Size
 setting.cyber-io-connection-size.description=The size of arrow between sender and receiver.
+setting.cyber-io-connection-moving-speed.name=Connection Arrow Moving Speed
+setting.cyber-io-connection-moving-speed.description=The speed of arrow moving between sender and receiver.
 setting.cyber-io-show-link-circle.name=Show Connection Circle
 setting.cyber-io-show-link-circle.description=Whether show a circle surrounding sender and receiver.
 setting.cyber-io-always-show-link.name=Always Show Connection
@@ -186,6 +188,7 @@ setting.cyber-io-show-wireless-tower-circle.name=Show Wireless Tower Circle
 setting.cyber-io-show-wireless-tower-circle.description=Whether the infinite pinging circle will show up
 setting.cyber-io-show-welcome.name=Receive Message from Plum Star Inc.
 setting.cyber-io-show-welcome.description=Whether flavor text shows up when game starts up.
+# Extra Settings
 setting.cyber-io-show-update.name=Show CyberIO Update Notification
 setting.cyber-io-show-update.description=Whether check update when game starts up.
 setting.cyber-io-check-update.button=Check Update
