Settings `connection-moving-speed` -> `connection-animation-speed`

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -176,8 +176,8 @@ setting.cyber-io-connection-density.name=Connection Density
 setting.cyber-io-connection-density.description=The density of arrow between sender and receiver.
 setting.cyber-io-connection-size.name=Connection Arrow Size
 setting.cyber-io-connection-size.description=The size of arrow between sender and receiver.
-setting.cyber-io-connection-moving-speed.name=Connection Arrow Moving Speed
-setting.cyber-io-connection-moving-speed.description=The speed of arrow moving between sender and receiver.
+setting.cyber-io-connection-animation-speed.name=Connection Animation Speed
+setting.cyber-io-connection-animation-speed.description=The speed of connection animation between sender and receiver.
 setting.cyber-io-show-link-circle.name=Show Connection Circle
 setting.cyber-io-show-link-circle.description=Whether show a circle surrounding sender and receiver.
 setting.cyber-io-always-show-link.name=Always Show Connection
