Change the bundle of Cyberion

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -55,7 +55,7 @@ block.cyber-io-stream-server.stats.power-use=Based on the number of host/client 
 block.cyber-io-jammer.name=Jammer
 block.cyber-io-jammer.description=Jamming devices. Warning! Your cell phone may be jammed by it!
 block.cyber-io-cyberion-mixer.name=Cyberion Mixer
-block.cyber-io-cyberion-mixer.description=No one will figure out how this thing works
+block.cyber-io-cyberion-mixer.description=No one will figure out how this thing works.
 block.cyber-io-cyberion-mixer.details=Developed by Plum Star Inc.
 block.cyber-io-holo-projector.name=Holo Projector
 block.cyber-io-holo-projector.description=Projecting holographic units by Cyberion.
@@ -93,7 +93,7 @@ item.cyber-io-ic.name=IC
 item.cyber-io-ic.description=A chip.
 # Liquids
 liquid.cyber-io-cyberion.name=Cyberion
-liquid.cyber-io-cyberion.description=An expensive liquid developed by Plum Star Inc., but no one knows how it does work.
+liquid.cyber-io-cyberion.description=An expensive liquid developed by Plum Star Inc., but its properties are still a secret.
 # Units
 unit.cyber-io-holo-miner.name=Holo Miner
 unit.cyber-io-holo-miner.description=A short-lived worker bee projected by Holo Projector.
