--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -88,6 +88,8 @@ block.cyber-io-DDoS.description=Send all data to this. If you find "Denied" on t
 block.cyber-io-DDoS.deny=Denied
 block.cyber-io-zip-bomb.name=Zip Bomb
 block.cyber-io-zip-bomb.description=Don't double-click this!
+block.cyber-io-p2p-node.name=P2P Node
+block.cyber-io-p2p-node.description=A decentralized communication of fluid exchange.
 # Items
 item.cyber-io-ic.name=IC
 item.cyber-io-ic.description=A chip.
