Localized random name of TMTRAINER

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -155,6 +155,7 @@ cyber-io.full-client=Reach Maximum Clients
 cyber-io.over-range=Over Range
 cyber-io.unsaved-change=You have unsaved changes
 cyber-io.unlimited=Unlimited
+cyber-io.random-name=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxy%&#~*|?!
 # Controls
 control.cyber-io.enable=Enable {0}
 control.cyber-io.validate=Validate
