--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -111,27 +111,21 @@ unit.cyber-io-holo-supporter.description=A support projected by Holo Projector, 
 bar.cyber-io.generation=Generation {0}
 bar.cyber-io.slow-down=Boost: -{0}%
 bar.cyber-io.efficiency-absorption=EFF Absorb: {0}%
-bar.cyber-io.team=Team: {0}
 bar.cyber-io.range=Range: {0} blocks
 bar.cyber-io.cool-down=Cool Down: {0}s
 bar.cyber-io.is-alive=Is Alive: {0}
 bar.cyber-io.rest-restore=Rest Restore: {0}
-bar.cyber-io.is-asleep=Is Asleep: {0}
-bar.cyber-io.progress=Progress: {0}%
 bar.cyber-io.prism=Prism
-bar.cyber-io.prism.pl=Prisms
 bar.cyber-io.linked=Linked
-bar.cyber-io.linked.no=No Link
+bar.cyber-io.unlinked=UnLinked
 bar.cyber-io.receiver=Receiver: {0}
 bar.cyber-io.sender=Sender: {0}
-bar.cyber-io.ani-state-last=Last: {0}
 bar.cyber-io.null=Null
 bar.cyber-io.client=Client: {0}
 bar.cyber-io.host=Host: {0}
 bar.cyber-io.rest-life=Rest Life
 bar.cyber-io.rest-life.figure=Rest Life: {0}s
 bar.cyber-io.rest-resurrect=Rest Life: {0} times
-bar.cyber-io.blood=Blood
 bar.cyber-io.temperature=Temperature
 # Statistic and Category
 category.cyber-io-heimdall=Heimdall
