--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -118,11 +118,11 @@ bar.cyber-io.rest-restore=Rest Restore: {0}
 bar.cyber-io.prism=Prism
 bar.cyber-io.linked=Linked
 bar.cyber-io.unlinked=UnLinked
-bar.cyber-io.receiver=Receiver: {0}
-bar.cyber-io.sender=Sender: {0}
+bar.cyber-io.receiver=Receiver
+bar.cyber-io.sender=Sender
 bar.cyber-io.null=Null
-bar.cyber-io.client=Client: {0}
-bar.cyber-io.host=Host: {0}
+bar.cyber-io.client=Client
+bar.cyber-io.host=Host
 bar.cyber-io.rest-life=Rest Life
 bar.cyber-io.rest-life.figure=Rest Life: {0}s
 bar.cyber-io.rest-resurrect=Rest Life: {0} times
