[release] Cyber IO v4.0 preview published!

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -194,8 +194,10 @@ setting.cyber-io-content-specific.button-tip=Select the specific content of Cybe
 setting.cyber-io-content-specific.title=Specific Content
 setting.cyber-io-content-specific.restart=Switch to {0} successfully. Please restart game to reload all contents.
 setting.cyber-io-content-specific.introduction=Select a specific version for Cyber IO to load
+setting.cyber-io-content-specific.saves-warning=NOTE: the saves with Cyber IO can't be shared among different specific versions.
 setting.cyber-io-content-specific.switch-to=You will switch to {0}
 setting.cyber-io-content-specific.switch-back=You switch back to {0}
+setting.cyber-io-content-specific.require-restart=Restart required.
 setting.cyber-io-advanced-function.title=Advanced Functions
 # Advanced Function
 advanced.cyber-io.github-mirror.button=GitHub Mirror
@@ -211,10 +213,10 @@ advanced.cyber-io.github-mirror.cancel-tooltip=Desert the input.
 advanced.cyber-io.map-cleaner=Map Cleaner
 advanced.cyber-io.map-cleaner.description=Enable Map Cleaner, you will find a special button named "Map Cleaner" in the settings menu while you are playing in a local map. Hit the button, then it will clear all contents from Cyber IO in that map.
 # Content Specific
-cyber-io.spec.vanilla.name=Vanilla
-cyber-io.spec.vanilla.desc=Playing vanilla Cyber IO in Mindustry. Restart required.
+cyber-io.spec.vanilla.name=Serpulo
+cyber-io.spec.vanilla.desc=Playing Cyber IO on Serpulo.
 cyber-io.spec.erekir.name=Erekir
-cyber-io.spec.erekir.desc=Playing Cyber IO on Erekir. Restart required.
+cyber-io.spec.erekir.desc=Playing Cyber IO on Erekir.
 # Heimdall
 heimdall.damage.name=Damage
 heimdall.damage.description=How much damage brain wave can cause
