--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -44,6 +44,7 @@ block.cyber-io-smart-distributor.tip=Distribute to surroundings side by side.
 block.cyber-io-smart-unloader.name=Smart Unloader
 block.cyber-io-smart-unloader.description=Smart Unloader can relieve the heavy pressure of transport and help improve mobility.
 block.cyber-io-smart-unloader.stats.power-use=Based on the number of connections and items required.
+block.cyber-io-smart-unloader.tip=Unload from surroundings side by side.
 block.cyber-io-stream-client.name=Stream Client
 block.cyber-io-stream-client.description=Clients can get the instant liquid but limited by the network speed.
 block.cyber-io-stream-host.name=Stream Host
