Better CyberionMixer drawer

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -278,6 +278,12 @@ heimdall.msg.controlled-4=Where am I
 heimdall.msg.controlled-5=Only me...
 heimdall.msg.controlled-6=I can feel myself
 heimdall.msg.controlled-7=[Thinking...]
+heimdall.msg.failed-control-0=No, you can not
+heimdall.msg.failed-control-1=Deny!
+heimdall.msg.failed-control-2=No
+heimdall.msg.failed-control-3=No way!
+heimdall.msg.failed-control-4=Unaccepted
+heimdall.msg.failed-control-5=Don't touch me
 # Heimdall Ear Killing
 heimdall.msg.ear-killing-0=Noisy
 heimdall.msg.ear-killing-1=I can hear you
@@ -333,7 +339,7 @@ heimdall.msg.on-payload-unit-1=Too high
 heimdall.msg.on-payload-unit-2=I'm falling!
 heimdall.msg.on-payload-unit-3=Help me!
 heimdall.msg.on-payload-unit-4=I'm flying
-# Heimdall Project
+#--WIP Don't translate this.-- Heimdall Project
 heimdall.title=Heimdall Project
 heimdall.button-tip=Develop the Heimdall Project
 heimdall.mining.category.Mineral=Mineral
