Don't touch Heimdall

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -278,12 +278,14 @@ heimdall.msg.controlled-4=Where am I
 heimdall.msg.controlled-5=Only me...
 heimdall.msg.controlled-6=I can feel myself
 heimdall.msg.controlled-7=[Thinking...]
-heimdall.msg.failed-control-0=No, you can not
-heimdall.msg.failed-control-1=Deny!
-heimdall.msg.failed-control-2=No
-heimdall.msg.failed-control-3=No way!
-heimdall.msg.failed-control-4=Unaccepted
-heimdall.msg.failed-control-5=Don't touch me
+# Heimdall Tap
+heimdall.msg.tap-0=Don't touch me!
+heimdall.msg.tap-1=No!
+heimdall.msg.tap-2=What are you doing!
+heimdall.msg.tap-3=I know what you want!
+heimdall.msg.tap-4=Disgusting!
+heimdall.msg.tap-5=I can feel your hand!
+heimdall.msg.tap-6=Whose hand?
 # Heimdall Ear Killing
 heimdall.msg.ear-killing-0=Noisy
 heimdall.msg.ear-killing-1=I can hear you
