Connection arrow bloom section.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -173,6 +173,7 @@ setting.cyber-io-connection-density.name=Connection Density
 setting.cyber-io-connection-density.description=The density of arrow between sender and receiver.
 setting.cyber-io-connection-size.name=Connection Arrow Size
 setting.cyber-io-connection-size.description=The size of arrow between sender and receiver.
+setting.cyber-io-connection-bloom.name=Connection Arrow Bloom
 setting.cyber-io-connection-animation-speed.name=Connection Animation Speed
 setting.cyber-io-connection-animation-speed.description=The speed of connection animation between sender and receiver.
 setting.cyber-io-show-link-circle.name=Show Connection Circle
