--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -128,9 +128,11 @@ bar.cyber-io.rest-life=Rest Life
 bar.cyber-io.rest-life.figure=Rest Life: {0}s
 bar.cyber-io.rest-resurrect=Rest Life: {0} times
 bar.cyber-io.temperature=Temperature
-# Statistic and Category
+# Statistic Category
 category.cyber-io-heimdall=Heimdall
 category.cyber-io-data-transfer=Data Transfer
+category.cyber-io-holography=Holography
+# Statistic Item
 stat.cyber-io-heimdall-basic=Basic
 stat.cyber-io-heimdall-improve=Upgrade
 stat.cyber-io-data-transfer-range=Range
@@ -138,7 +140,11 @@ stat.cyber-io-data-transfer-max-sender=Max Sender
 stat.cyber-io-data-transfer-max-receiver=Max Receiver
 stat.cyber-io-data-transfer-max-host=Max Host
 stat.cyber-io-data-transfer-max-client=Max Client
+stat.cyber-io-data-transfer-speed=Transfer Speed
 stat.power-cyber-io-transfer-speed=Transfer Speed
+stat.optional-cyber-io-max-obelisk=Max Obelisk
+stat.cyber-io-holography-charge=Charge
+stat.cyber-io-holography-hp-at-least=Health At Least
 # Bundles
 cyber-io.cost.second=sec
 cyber-io.cost.minute=min
