--- a/.github/workflows/PullRequest.yml
+++ b/.github/workflows/PullRequest.yml
@@ -15,6 +15,10 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 16
+      - name: Test mod
+        run: |
+          chmod +x gradlew
+          ./gradlew test
       - name: Build mod jar
         run: |
           chmod +x gradlew
