--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Test CyberIO
         run: |
           chmod +x gradlew
-          ./gradlew :main:test
+          ./gradlew test
 
       - name: Build Cyber-IO
         run: |
