--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,3 +1,5 @@
+#TechTree
+techtree.cyber-io=Cyber IO
 # Blocks
 block.cyber-io-ic-machine.name=IC Machine
 block.cyber-io-ic-machine.description=A machine which can make chips.
