Cyberion for Erekir welcome

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -98,7 +98,7 @@ item.cyber-io-ic.name=IC
 item.cyber-io-ic.description=A chip.
 # Liquids
 liquid.cyber-io-cyberion.name=Cyberion
-liquid.cyber-io-cyberion.description=An expensive liquid developed by Plum Star Inc., but its properties are still a secret.
+liquid.cyber-io-cyberion.description=An expensive liquid developed by Plum Star Inc., but its property remains a mystery
 # Units
 unit.cyber-io-holo-miner.name=Holo Miner
 unit.cyber-io-holo-miner.description=A short-lived worker bee projected by Holo Projector.
