--- a/assets/welcomes/en.properties
+++ b/assets/welcomes/en.properties
@@ -1,6 +1,6 @@
 #---Do not translate---
 Default.title=Default for Test
-Default=If you saw this page, it might mean you are using the CyberIO for test or CyberIO didn't load properly.\n\
+Default=If you saw this page, you are likely using the CyberIO for test or CyberIO didn't load properly.\n\
   If you aren't a developer (modder), please contact with the author(s) of CyberIO.
 Default.read=I see
 #---Do not translate---
@@ -77,3 +77,9 @@ SetOutErekir=No time to wait any longer! If we didn't go to Erekir right now, ou
   The spaceship has been already prepared for you, let's go!
 SetOutErekir.yes=Set Out
 SetOutErekir.no=Wait
+CyberionForErekir.title=Cyberion?
+CyberionForErekir=Since we landed on Erekir, the Cyberion has become weird in the trunk of our ship.\n\
+  It turned red or orange, and so scorching even boiling.\n\
+  And the physical properties of IC are changing. Our devices are about to stop working!\n\
+  Now, find out the reason for all this uncanny things on this mysterious planet! Be careful!
+CyberionForErekir.read=Yes Sir
