--- a/assets/welcomes/ja.properties
+++ b/assets/welcomes/ja.properties
@@ -12,7 +12,7 @@ Discord=\u6642\u3005\u3001\u4E00\u4EBA\u3067\u30B9\u30DA\u30FC\u30B9\u3092\u6B69
   \u3055\u3066\u3001\u60AA\u3044\uFF25\uFF23\uFF28\uFF2F\u4FE1\u53F7\u306B\u3082\u304B\u304B\u308F\u3089\u305A\u3001\u8CB4\u65B9\u3092\u5F85\u3063\u3066\u3044\u308B\u60D1\u661F\u300ADiscord\u300B\u306E\u300APlumStar\u300B\u304C\u6709\u308A\u307E\u3059\u3002\n\
   \u4ECA\u3001\u79C1\u305F\u3061\u306B\u53C2\u52A0\u3057\u3066\u8A55\u5224\u3092\u78BA\u4FDD\u3057\u305F\u308A\u3001\u8CB4\u65B9\u304C\u671B\u3080\u3082\u306E\u3092\u5831\u544A\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 Discord.link=https://discord.gg/PDwyxM3waw
-Discord.yes=\u30EA\u30F3\u30AF\u3092\u958B\u304F
+Discord.yes=[accent]\u30EA\u30F3\u30AF\u3092\u958B\u304F[]
 Discord.no=\u30B8\u30E3\u30F3\u30AF\u3068\u3057\u3066\u30DE\u30FC\u30AF
 UpdateECHO.title=\uFF25\uFF23\uFF28\uFF2F\u3092\u66F4\u65B0\u3059\u308B
 UpdateECHO=News: \u6700\u8FD1\u3001\uFF25\uFF23\uFF28\uFF2F\u306F\u65B0\u3057\u3044\u30D0\u30FC\u30B8\u30E7\u30F3\u3092\u516C\u958B\u3057\u307E\u3057\u305F {0}\u3002\n\
