--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -37,7 +37,9 @@ jobs:
 
   release:
     needs: build
-    if: ${{ startsWith(github.event.head_commit.message,'[release]') }}
+    if: |
+      contains(github.event.head_commit.message,'[release]') &&
+      github.repository == 'liplum/CyberIO'
     runs-on: ubuntu-latest
     env:
       GH_REPO: ${{ github.repository }}
