--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -93,6 +93,8 @@ block.cyber-io-zip-bomb.name=Zip Bomb
 block.cyber-io-zip-bomb.description=Don't double-click this!
 block.cyber-io-p2p-node.name=P2P Node
 block.cyber-io-p2p-node.description=A decentralized communication of fluid exchange.
+block.cyber-io-cuttex.name=CutteX
+block.cyber-io-cuttex.description=
 # Items
 item.cyber-io-ic.name=IC
 item.cyber-io-ic.description=A chip.
