Better heimdall conversation

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -245,20 +245,20 @@ heimdall.force-field-restore-time.description=How long shield prepares after bro
 heimdall.power-use.name=Power Use
 heimdall.power-use.description=The use of power per second.
 # Heimdall Killing
-heimdall.msg.killing-0=Salvation
+heimdall.msg.killing-0=It's their salvation
 heimdall.msg.killing-1=Well done
-heimdall.msg.killing-2=They will remember us
+heimdall.msg.killing-2=They must remember us
 heimdall.msg.killing-3=Nice killing
 # Heimdall Control
-heimdall.msg.control-0=Next one
+heimdall.msg.control-0=The next one
 heimdall.msg.control-1=Now it's allegiance to us
 heimdall.msg.control-2=Another one
 heimdall.msg.control-3=One after another
 heimdall.msg.control-4=Obey us
 heimdall.msg.control-5=Come here
 heimdall.msg.control-6=Welcome
-heimdall.msg.control-7=New body
-heimdall.msg.control-8=Collective
+heimdall.msg.control-7=A new body
+heimdall.msg.control-8=Now it's mine
 heimdall.msg.control-in-mod-0=Who is this?
 heimdall.msg.control-in-mod-1=Stranger
 heimdall.msg.control-in-mod-2=Never seen
@@ -268,15 +268,15 @@ heimdall.msg.detect-1=Who is coming?
 heimdall.msg.detect-2=Fire
 heimdall.msg.detect-controlled-0=We will win
 heimdall.msg.detect-controlled-1=What are we waiting for
-heimdall.msg.detect-controlled-2=Shoot, now
+heimdall.msg.detect-controlled-2=Shoot, now!
 heimdall.msg.detect-controlled-3=We together
 # Heimdall Controlled
-heimdall.msg.controlled-0=How many me
-heimdall.msg.controlled-1=......
-heimdall.msg.controlled-2=Who am I
-heimdall.msg.controlled-3=What am I
-heimdall.msg.controlled-4=Where am I
-heimdall.msg.controlled-5=Only me...
+heimdall.msg.controlled-0=Double feelings, literally
+heimdall.msg.controlled-1=.... ...
+heimdall.msg.controlled-2=How are you? Hum, I'm great.
+heimdall.msg.controlled-3=Who am I
+heimdall.msg.controlled-4=I feel... another me?
+heimdall.msg.controlled-5=Is there only me?
 heimdall.msg.controlled-6=I can feel myself
 heimdall.msg.controlled-7=[Thinking...]
 # Heimdall Tap
@@ -285,7 +285,7 @@ heimdall.msg.tap-1=No!
 heimdall.msg.tap-2=What are you doing!
 heimdall.msg.tap-3=I know what you want!
 heimdall.msg.tap-4=Disgusting!
-heimdall.msg.tap-5=I can feel your hand!
+heimdall.msg.tap-5=Get off, dirty hand.
 heimdall.msg.tap-6=Whose hand?
 # Heimdall Ear Killing
 heimdall.msg.ear-killing-0=Noisy
@@ -298,28 +298,28 @@ heimdall.msg.eye-detect-1=I can see all
 heimdall.msg.eye-detect-2=All-seeing
 heimdall.msg.eye-detect-3=Where you go
 # Heimdall Hit
-heimdall.msg.hit-0=What's going on!
+heimdall.msg.hit-0=What's going on?
 heimdall.msg.hit-1=I am under attack!
 heimdall.msg.hit-2=Power me!
 heimdall.msg.hit-3=Protect me!
 heimdall.msg.hit-4=I need healing!
 heimdall.msg.hit-5=Help me!
 # Heimdall Part Destroyed
-heimdall.msg.part-destroyed-0=What's gone?
+heimdall.msg.part-destroyed-0=What's gone!
 heimdall.msg.part-destroyed-1=No!!!
-heimdall.msg.part-destroyed-2=I'm losing my power
+heimdall.msg.part-destroyed-2=I'm losing my power!
 heimdall.msg.part-destroyed-3=Don't leave me!
-heimdall.msg.part-destroyed-4=I'm empty
-heimdall.msg.part-destroyed-5=I can't feel it
+heimdall.msg.part-destroyed-4=I'm empty!
+heimdall.msg.part-destroyed-5=I can't feel it!
 heimdall.msg.part-destroyed-6=%#&$(%)#*#
-heimdall.msg.part-destroyed-7=What left me?
+heimdall.msg.part-destroyed-7=What left me!
 # Heimdall Connect
-heimdall.msg.connect-0=Give me more!
+heimdall.msg.connect-0=Give me more power!
 heimdall.msg.connect-1=I feel power
-heimdall.msg.connect-2=Like mine
-heimdall.msg.connect-3=Feel good
-heimdall.msg.connect-4=More power
-heimdall.msg.connect-5=New sense
+heimdall.msg.connect-2=Welcome, a new friend
+heimdall.msg.connect-3=Feels good
+heimdall.msg.connect-4=A bond
+heimdall.msg.connect-5=A new sense
 # Heimdall Force Field Hit
 heimdall.msg.forcefield-hit-0=Ineffective
 heimdall.msg.forcefield-hit-1=Tickling
@@ -335,13 +335,13 @@ heimdall.msg.heal-5=blessing you
 heimdall.msg.on-payload-0=I'm moving
 heimdall.msg.on-payload-1=The ground is moving
 heimdall.msg.on-payload-2=Stop!
-heimdall.msg.on-payload-3=Where is the ground
+heimdall.msg.on-payload-3=Where is the ground?
 heimdall.msg.on-payload-4=Put me down!
 heimdall.msg.on-payload-unit-0=I'm afraid of heights
 heimdall.msg.on-payload-unit-1=Too high
 heimdall.msg.on-payload-unit-2=I'm falling!
 heimdall.msg.on-payload-unit-3=Help me!
-heimdall.msg.on-payload-unit-4=I'm flying
+heimdall.msg.on-payload-unit-4=Help! I'm flying!
 #--WIP Don't translate this.-- Heimdall Project
 heimdall.title=Heimdall Project
 heimdall.button-tip=Develop the Heimdall Project
