Added discharger and her bullet

--- a/assets/welcomes/en.properties
+++ b/assets/welcomes/en.properties
@@ -34,7 +34,7 @@ ResearchProject=Good morning, newcomer! Since the former employee at your positi
   But fortunately, this project is now handed over to you, our savior. Now, go back to work!
 ResearchProject.read=Go Work
 TheSHIP.title=The SHIP
-TheSHIP=Image that you were floating in the space alone, what's the most important? Yes, of course, a spaceship.\n\
+TheSHIP=Imagine that you were floating in the space alone, what's the most important? Of course, a spaceship.\n\
   The best&wise choice is the SHIP, produced by Plum Star Inc.,\n powered by controlled nuclear fusion and using the latest Ouroboros OS (stability guaranteed).\n\
   Commodity code: 111_1111_11_1001\n\
   PS: ECHO consultation accepted.
