--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -37,9 +37,9 @@ block.cyber-io-TMTRAINER.name=TMTRAINER
 block.cyber-io-TMTRAINER.description=TMTRAINER
 block.cyber-io-TMTRAINER.details=TMTRAINER
 block.cyber-io-prism.name=Prism
-block.cyber-io-prism.description=Clones projectiles the prisms come into contact.
+block.cyber-io-prism.description=PRISM will clone your bullets because it's for your security.\nClones projectiles the prisms come into contact with,[red] regardless of it's class[].
 block.cyber-io-prism-obelisk.name=Obelisk
-block.cyber-io-prism-obelisk.description=It's watching you. Boosts Prisms it's touching.
+block.cyber-io-prism-obelisk.description=It's watching you…\nBoosts Prisms it's touching.
 block.cyber-io-prism-obelisk.tip=Link with a Prism side by side
 block.cyber-io-smart-distributor.name=Smart Distributor
 block.cyber-io-smart-distributor.description=One-click to connect, it's very easy to distribute your software.
@@ -60,7 +60,8 @@ block.cyber-io-stream-server.stats.power-use=Based on the number of host/client 
 block.cyber-io-jammer.name=Jammer
 block.cyber-io-jammer.description=Jams units/structures by firing a powerful laser. Warning! Your cell phone may be jammed by it! Requires Cyberion.
 block.cyber-io-cyberion-mixer.name=Cyberion Mixer
-block.cyber-io-cyberion-mixer.description=No one will figure out how this thing works. Mixes Cyberion.
+block.cyber-io-cyberion-mixer.description=No one will figure out how this thing works.
+block.cyber-io-cyberion-mixer.details=They, uh, craft cyberion?
 block.cyber-io-cyberion-mixer.details=Developed by Plum Star Inc.
 block.cyber-io-holo-projector.name=Holo Projector
 block.cyber-io-holo-projector.description=Projects holographic units using Cyberion and ICs.
@@ -71,10 +72,10 @@ block.cyber-io-aqua-cyberion.name=Cyberion
 block.cyber-io-aqua-cyberion.description=A common liquid.
 block.cyber-io-wireless-tower.name=Wireless Tower
 block.cyber-io-wireless-tower.description=Transfers battery energy seamlessly. The ionizing radiation is harmless for your mechanical body.
-block.cyber-io-wireless-tower.details=Powered by Plum Star Inc. literally.
+block.cyber-io-wireless-tower.details=Powered by Plum Star Inc. Literally.
 block.cyber-io-wireless-tower.stats.power-use=Based on the amount of power use.
 block.cyber-io-data-miner.name=Data Miner
-block.cyber-io-data-miner.description=Extracts the real mineral by AI. If you find this, oh you'll have a bad time fighting Plum Star Inc…
+block.cyber-io-data-miner.description=Extracts the real mineral by AI. If you find this, please know that this item is reserved. 
 block.cyber-io-heimdall.name=Heimdall
 block.cyber-io-heimdall.description=The combination of biotech, brain science and Ions, using Brain\u2013computer interfaces and neural network, can totally change the enemy's mindset.\nHas varying upgrades whenever connected properly.
 block.cyber-io-heimdall.details=The project of New Brains Crop.
@@ -160,7 +161,7 @@ cyber-io.full-client=Reach Maximum Clients
 cyber-io.over-range=Over Range
 cyber-io.unsaved-change=You have unsaved changes
 cyber-io.unlimited=Unlimited
-cyber-io.random-name=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxy%&#~*|?!
+cyber-io.random-name=ABCDEFGHIJKLMNÑOPQRSTUVWXYZabcdefghijklmnñopqrstuvwxy%&#~*|?!£_&-+()/"':;!?
 # Controls
 control.cyber-io.enable=Enable {0}
 control.cyber-io.validate=Validate
@@ -232,29 +233,29 @@ cyber-io.spec.erekir.name=Erekir
 cyber-io.spec.erekir.desc=Playing Cyber IO on Erekir.
 # Heimdall
 heimdall.damage.name=Damage
-heimdall.damage.description=How much damage brain wave can cause
+heimdall.damage.description=How much damage the brain wave can cause
 heimdall.range.name=Range
-heimdall.range.description=How far brain wave can reach
+heimdall.range.description=How far the brain wave can reach
 heimdall.wave-speed.name=Wave Speed
-heimdall.wave-speed.description=How fast brain wave can move
+heimdall.wave-speed.description=How fast the brain wave can move
 heimdall.wave-width.name=Wave Width
-heimdall.wave-width.description=How wide brain wave is.
+heimdall.wave-width.description=How wide the brain wave is
 heimdall.reload-time.name=Reload
-heimdall.reload-time.description=How long between two waves
+heimdall.reload-time.description=Wave reload time 
 heimdall.max-brain-wave-num.name=Wave Number
 heimdall.max-brain-wave-num.description=How many waves can exist at the same time
 heimdall.control-line.name=Control
-heimdall.control-line.description=Enemy can be controlled when its HP lower than
+heimdall.control-line.description=Enemy can be controlled when its HP lower than:
 heimdall.force-field-max.name=Shield
-heimdall.force-field-max.description=The maximum of shield capacity if existed
+heimdall.force-field-max.description=The maximum shield resistance if it exists
 heimdall.force-field-regen.name=Shield Regeneration
 heimdall.force-field-regen.description=The regeneration efficiency of shield
 heimdall.force-field-radius.name=Shield Range
-heimdall.force-field-radius.description=The max range that shield can protect
+heimdall.force-field-radius.description=Maximum shield coverage
 heimdall.force-field-restore-time.name=Shield Reload
-heimdall.force-field-restore-time.description=How long shield prepares after broken
+heimdall.force-field-restore-time.description=How long before the shield can be restored
 heimdall.power-use.name=Power Use
-heimdall.power-use.description=The use of power per second.
+heimdall.power-use.description=Power consumption per second
 # Heimdall Killing
 heimdall.msg.killing-0=Salvation.
 heimdall.msg.killing-1=Well done.
@@ -299,10 +300,10 @@ heimdall.msg.tap-4=Disgusting!
 heimdall.msg.tap-5=I can feel your hand!
 heimdall.msg.tap-6=Whose hand?
 # Heimdall Ear Killing
-heimdall.msg.ear-killing-0=Noisy
-heimdall.msg.ear-killing-1=I can hear you
-heimdall.msg.ear-killing-flying-0=A mosquito
-heimdall.msg.ear-killing-flying-1=A flying
+heimdall.msg.ear-killing-0=Noisy.
+heimdall.msg.ear-killing-1=I can hear you.
+heimdall.msg.ear-killing-flying-0=Ew, a mosquito.
+heimdall.msg.ear-killing-flying-1=A flying weakling.
 # Heimdall Eye Detect Enemy
 heimdall.msg.eye-detect-0=Insight…
 heimdall.msg.eye-detect-1=I can see all!
@@ -318,7 +319,7 @@ heimdall.msg.hit-5=Help me!
 # Heimdall Part Destroyed
 heimdall.msg.part-destroyed-0=What's gone?
 heimdall.msg.part-destroyed-1=No!!
-heimdall.msg.part-destroyed-2=I'm losing my power
+heimdall.msg.part-destroyed-2=I'm losing my power!
 heimdall.msg.part-destroyed-3=Don't leave me!
 heimdall.msg.part-destroyed-4=I'm empty…
 heimdall.msg.part-destroyed-5=I can't feel it…
